Rename header from "regroup-tabs" to "Tab Regrouper" in popup.html

--- a/popup.html
+++ b/popup.html
@@ -68,7 +68,7 @@
   </style>
 </head>
 <body>
-  <h1>regroup-tabs</h1>
+  <h1>Tab Regrouper</h1>
   <div class="section">
     <div class="textarea-button-group">
       <div class="input-group">
