--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>regroup-tabs</title>
+  <title>Tab Regrouper</title>
   <meta charset="UTF-8">
   <style>
     body {
